--- a/public/birthday-invite.html
+++ b/public/birthday-invite.html
@@ -1,12 +1,12 @@
 <h1>It's My Birthday!</h1>
-<h2> On the 17th September</h2>
+<h2> On the 17th September. I want to invite you all to make my day memorable.</h2>
 <br/>
 
 <h3> What to bring:-</h3>
 <ul>
-<li>Ballons</li>
-<li>Cake</li>
-<li>Some candle</li>
+<li>Ballons (As I love them)</li>
+<li>Cake(so that we can distribute to children who works for their survival)</li>
+<li>Love( HaHA Offcourse you all will bring this for me)</li>
 </ul>
 <a href="
 https://www.google.com/maps/@35.7040744,139.5577317,3a,75y,289.6h,87.01t,0.72r/data=!3m6!1e1!3m4!1sgT28ssf0BB2LxZ63JNcL1w!2e0!7i13312!8i6656">Google map link</a>
