--- a/index.html
+++ b/index.html
@@ -3,22 +3,32 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Amar Singh's Portfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Agency</title>
+  <link rel="stylesheet" href="./style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <h1>Amar singh's Portfolio</h1>
-  <h2>I'm a student of Vidyashilp university doing my undergraduate in Btech data Science(hons) 
-    Currently I am learning Web Development.
-  </h2>
-  <hr />
-  <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
-  
-  <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
+  <div class="main">
+    <img class="logo" src="./logo.png" alt="logo">
+    <h1>Happy Birthday <span class="creative">Shreya (Future doctor)</span></br>Have a Mst Wala Day</h1>
+    <div class="left card"><img class="tile-image" src="./sis.jpg" alt="Shreya">
+      <h2 class="card-title">My Luluaa</h2>
+      <p class="card-text">Happy Birthday, my dear sister! I am blessed to have you in my life, and I am confident that you will make a remarkable difference in the world of medicine. May you always shine bright and achieve every milestone with grace.</p>
+    </div>
 
-  <hr />
-  <a href="./public/about.html">About Me</a>
-  <a href="./public/contact.html">Contact Me</a>
+    <div class="right card"><img class="tile-image" src="./Bro.jpg" alt="Amar Singh">
+      <h2 class="card-title">Brother's Love</h2>
+      <p>Hey Happy Birthday ree lulluaaa my kutuwaaa.I wish u a very Happy walaa Birthday may this birthday make u feel so special. You are really so important for me and in my life u will be there always not promise but yaa I want it. Jlddi jlddi se doctor bnn janaa aur mjee se khoob jaada paaisa kamnaa aur seva bhii krnaaa ree aur mere saadi me ek four wheeler dedenaa bss baachaua hahha.. Yrr misss u ree kuutuvaa I will not write much but yaa i will say thankyou really thankyoufor being with me in every situation u scolded me thats a job of sister if a brother have done a wrong thing but never left me alone thanks yrr shreyaa sachh mee yrr ...May god help u to achive every milestone of your life.</p>
+    </div>
+
+  </div>
+  <footer>
+    <p id="love">Love.Brother.Sister</p>
+  </footer>
 </body>
 
 </html>
